Update script for creating intensity dfs

--- a/04_DistanceAnalysis/Get Intensity Dataframes.ipynb
+++ b/04_DistanceAnalysis/Get Intensity Dataframes.ipynb
@@ -2,32 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "import skimage\n",
     "from skimage import io, morphology, measure\n",
     "import os\n",
     "import pandas as pd\n",
-    "from skimage.measure import label, regionprops, regionprops_table"
+    "from skimage.measure import label, regionprops, regionprops_table\n",
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scikit-image version: 0.22.0\n",
+      "numpy version: 1.26.4\n",
+      "pandas version: 2.2.0\n",
+      "os version: os 3.10.12 | packaged by conda-forge | (main, Jun 23 2023, 22:39:40) [Clang 15.0.7 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"scikit-image version:\", skimage.__version__)\n",
+    "print(\"numpy version:\", np.__version__)\n",
+    "print(\"pandas version:\", pd.__version__)\n",
+    "print(\"os version:\", os.__name__, sys.version)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get file path\n",
     "cwd = os.path.dirname(os.getcwd())\n",
-    "roi = \"R1C1ROI2\" # CHANGE THIS if necessary\n"
+    "roi = \"R1B1ROI1\" # CHANGE THIS if necessary\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Images of the markers dict_keys(['actin', 'cd3', 'cd4', 'podoplanin', 'fibulin2', 'cytokeratin', 'cd45', 'lyve1', 'cd45ro', 'collageni']) loaded.\n"
+      "Images of the markers dict_keys(['collageni', 'cd45ro', 'lyve1', 'cd138', 'cytokeratin', 'fibulin2', 'cd45', 'podoplanin', 'cd3', 'cd4', 'cd38', 'actin']) loaded.\n"
      ]
     }
    ],
@@ -79,16 +103,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/fschulz/Documents/Uni/LundUniversity/Year2/Thesis/00_Data/PP_Images/R1C1ROI2'"
+       "'/Users/fschulz/Documents/Uni/LundUniversity/Year2/Thesis/00_Data/PP_Images/R1B1ROI1'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,46 +133,46 @@
     "    if images[img].shape != maskshape:\n",
     "        print(\"The shape for image {} is wrong. Shape was: {}.\".format(img, images[img].shape))\n",
     "        \n",
-    "        \n",
-    "        \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "dont=run\n",
     "blackrow = np.zeros(9427)\n",
-    "fib2 = images[\"fibulin2\"]\n",
+    "cd45 = images[\"cd45\"]\n",
     "for i in range(29):\n",
-    "    fib2 = np.vstack([fib2, blackrow])\n",
+    "    cd45 = np.vstack([cd45, blackrow])\n",
     "    \n",
-    "images[\"fibulin2\"] = fib2"
+    "images[\"cd45\"] = cd45"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trying actin\n",
+      "trying collageni\n",
+      "trying cd45ro\n",
+      "trying lyve1\n",
+      "trying cd138\n",
+      "trying cytokeratin\n",
+      "trying fibulin2\n",
+      "trying cd45\n",
+      "trying podoplanin\n",
       "trying cd3\n",
       "trying cd4\n",
-      "trying podoplanin\n",
-      "trying fibulin2\n",
-      "trying cytokeratin\n",
-      "trying cd45\n",
-      "trying lyve1\n",
-      "trying cd45ro\n",
-      "trying collageni\n",
-      "Done. All data frames saved to /Users/fschulz/Documents/Uni/LundUniversity/Year2/Thesis/00_Data/IntensityDataFrames/R1C1ROI2\n"
+      "trying cd38\n",
+      "trying actin\n",
+      "Done. All data frames saved to /Users/fschulz/Documents/Uni/LundUniversity/Year2/Thesis/00_Data/IntensityDataFrames/R1B1ROI1\n"
      ]
     }
    ],
@@ -159,7 +183,7 @@
     "        #continue\n",
     "    print(\"trying\", marker)\n",
     "    try:\n",
-    "        intensities = pd.DataFrame(regionprops_table(mask, images[marker], properties=[\"intensity_mean\"]))\n",
+    "        intensities = pd.DataFrame(regionprops_table(mask, images[marker], properties=[\"intensity_mean\", \"intensity_min\", \"intensity_max\"]))\n",
     "        dfname = cwd +  \"/00_Data/IntensityDataFrames/\" + roi + \"/\" + marker + \"df.csv\"\n",
     "        intensities.to_csv(dfname)\n",
     "    except:\n",
