Updating dist mat script

--- a/07_DistanceAnalysis/DistanceMatrix.ipynb
+++ b/07_DistanceAnalysis/DistanceMatrix.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,29 +56,12 @@
     "### USER-INPUT ###\n",
     "\"\"\"\n",
     "Write the sample image you would like to use. \n",
-    "Make sure the ones you pick are available in the necessary folders, both as masks and as intensity data frames.\n",
+    "Make sure the ones you pick are available in the necessary folder as intensity data frames.\n",
     "On the GitHub repository for this project, only R1B1ROI1 is available as example input, so if you only have \n",
     "access to the GitHub, please only use that here.\n",
     "\"\"\"\n",
     "#img_names = ['R1B1ROI1', 'R1B1ROI2', 'R1C1ROI1', 'R1C1ROI2', 'R1D1ROI1', 'R1D1ROI2']\n",
     "img_names = ['R1B1ROI1']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load all masks from folder\n",
-    "# Make sure the folder structure is the same as here\n",
-    "masks = {}\n",
-    "maskdir = '../02_Segmentation/FinalNucleiCytoSeg/'\n",
-    "for i in img_names:\n",
-    "    filename = i + \"_NucleiCytoSegmentationV2.tif\"\n",
-    "    maskpath = os.path.join(maskdir, filename)\n",
-    "    mask = io.imread(maskpath)\n",
-    "    masks[i] = mask"
    ]
   },
   {
